# podcast-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  Jenkinsfile  feed.py  manage.py  pyproject.toml
.github/workflows/: ci.yaml  docker-publish.yaml  updated_ci.yaml
docker_django/: settings.py  wsgi.py
hello/: urls.py  views.py
tests/: test_basic.py
