[tool.poetry]
name = "podcast-test"
version = "0.1.0"
description = "Podcast project with pre-commit hooks"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
ruff = "^0.4.4"
pyright = "^1.1.354"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
