
[tool.poetry]
name = "django-app"
version = "0.1.0"
description = "Podcast project with pre-commit hooks"
authors = ["Your Name <your@email.com>"]
packages = [
	{include = "helllo", from = "."},
	{include = "docker_django", from = "."}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = ">=4.2"
gunicorn = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
ruff = "^0.4.4"
pyright = "^1.1.354"
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
unittest-xml-reporting = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
